--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"); 
 
 :root { 
-  --cor-destaque: #ed145b; 
+  --cor-destaque: #8f060681; 
   --cor-gradiente-preto: linear-gradient( 
     113deg, 
     #000 0%, 
@@ -57,7 +57,7 @@ h1 {
 } 
 
 #entrada-de-texto::placeholder { 
-  color: #828282; 
+  color: #880d0d; 
   font-size: 2rem; 
   font-weight: 400; 
   line-height: normal; 
@@ -72,7 +72,7 @@ h1 {
   border-radius: 0.5rem; 
   border: none; 
   background: var(--cor-destaque); 
-  color: #000; 
+  color: #03118f; 
   font-size: 2.5rem; 
   font-weight: 500; 
   line-height: normal; 
