--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ h1 {
   gap: 0.625rem; 
   align-self: stretch; 
   border-radius: 0.625rem; 
-  background: #fff; 
+  background: #b82222; 
   font-size: 2rem; 
 } 
 
@@ -72,7 +72,7 @@ h1 {
   border-radius: 0.5rem; 
   border: none; 
   background: var(--cor-destaque); 
-  color: #03118f; 
+  color: #dbdbdb; 
   font-size: 2.5rem; 
   font-weight: 500; 
   line-height: normal; 
