--- a/style.css
+++ b/style.css
@@ -52,11 +52,11 @@ h1 {
   gap: 0.625rem; 
   align-self: stretch; 
   border-radius: 0.625rem; 
-  background: #b82222; 
+  background: #006d24; 
   font-size: 2rem; 
 } 
 
-#entrada-de-texto::placeholder { 
+#entrada-de-texto::placeholder { .
   color: #880d0d; 
   font-size: 2rem; 
   font-weight: 400; 
